--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,19 @@
     border-radius: 5px;
     border:none;
     font-size: 20px;
+    cursor: pointer;
+}
+.btn-contact{
+    padding: 18px 35px;
+    border-radius: 5px;
+    border:none;
+    font-size: 20px;
+    font-weight:bold;
+    border:1px solid #FD6E0A;
+    color: #FD6E0A;
+    background-color: transparent;
+    cursor: pointer;
+    
 }
 .section-tittle{
     font-size:35px;
@@ -45,8 +58,10 @@
 }
 .section-description{
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 400;
     color:#757575;
+    line-height: 30px;
+    margin-bottom:30px;
 }
 .text-center{
     text-align: center;
@@ -111,6 +126,11 @@ nav ul li a{
     
  
 }
+.banner-button{
+    display:flex;
+    gap:20px;
+    margin-top: 30px;
+}
 /* main styles */
 main{
     max-width:1140px ;
@@ -139,21 +159,33 @@ main section{
 .skills-container{
     display: flex;
     gap:24px;
+    margin-top:50px;
 }
 .skill{
     padding:30px;
     box-shadow:0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
+.skill-content{
+   /* border:1px solid red; */
+   margin-top:30px;
+}
+.skill-description{
+    margin-top: 20px;
+    line-height: 28px;
+    font-size: 16px;
+}
 /* resume section style */
 .resume-container{
     display:flex;
-    gap:24px;
+    gap:71px;
+    margin-top:113px;
 }
 
 .experience-sub-tittle{
     font-size: 20px;
     font-weight: 600;
     margin-bottom:20px;
+
 }
 .experience-description, .experience-sub-tittle{
     color:#757575;
@@ -176,6 +208,14 @@ main section{
     justify-content: space-between;
 
 }
+.resume-column-tittle{
+    margin-bottom:30px;
+    font-size: 30px;
+    font-weight: bold;
+}
+.experience-tittle{
+    margin-bottom:10px;
+}
 /* footer styles */
 footer{
     padding:130px 230px;
@@ -185,6 +225,12 @@ footer{
 }
 .footer-column{
     width:50%;
+   /* border: 1px solid red; */
+}
+.footer-img{
+    display:flex;
+    gap:20px;
+    margin-top:30px;
 }
 input[type="text"],footer input[type="email"],footer textarea{
     height: 64px;
