--- a/styles/style.css
+++ b/styles/style.css
@@ -242,3 +242,39 @@ input[type="text"],footer input[type="email"],footer textarea{
     padding:10px 20px;
     margin-bottom:24px;
 }
+
+/* responsive */
+ @media screen and (max-width:576px){
+     .skills-container, 
+     .resume-container,
+     .banner,
+     nav,
+     nav > ul,
+     footer,.about-items{
+        flex-direction: column;
+     }
+     nav > ul{
+        gap:20px;
+     }
+     .btn-primary{
+        margin-bottom:20px;
+     }
+     .banner{
+        margin:20px;
+     }
+     .header{
+        background-image: none;
+     }
+     .banner-profile-pic{
+        width:100%
+     }
+    footer,.about{
+         padding:20px;
+    }
+     .footer-column{
+        width: 100%;
+     }
+     .input[type="text"],footer input[type="email"],footer textarea{
+        width: calc(100% - 40px);
+     }
+ }
